2013-01-23  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (max_filename_mbslen): New function.
	(normalize_filename, readdir): Use it to detect locales where ANSI
	encoding of file names uses a double-byte character set (DBCS).
	If a DBCS encoding is used, advance by characters using
	CharNextExA, instead of incrementing a 'char *' pointer.  Use
	_mbslwr instead of _strlwr.  (Bug#13515)

2013-01-22  Eli Zaretskii  <eliz@gnu.org>

	* w32heap.c (allocate_heap) [!_WIN64]: Decrease the initial
	request of memory reservation to 1.7GB.  (Bug#13065)

2013-01-20  Andreas Schwab  <schwab@linux-m68k.org>

	* coding.c (detect_coding_iso_2022): Move back mis-reordered code
	at check_extra_latin label.  (Bug#13505)

2013-01-17  Glenn Morris  <rgm@gnu.org>

	* fns.c (Frandom): Doc fix.

2013-01-13  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfont.m (LCD_SMOOTHING_MARGIN): New define.
	(nsfont_draw): Remove disabling of LCD smoothing.
	(ns_glyph_metrics): Add LCD_SMOOTHING_MARGIN to bearings to fix
	Bug#11484 with LCD smoothing on.

2013-01-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>  (tiny change)

	* gtkutil.c (xg_initialize): Backport from trunk.
	Add ifdef HAVE_FREETYPE around x_last_font_name (Bug#13403).

2013-01-11  Paul Eggert  <eggert@cs.ucla.edu>

	Backport typo fix from trunk, for AIX (Bug#13408).
	* eval.c (mark_backtrace) [BYTE_MARK_STACK]: Remove stray '*'.
	This follows up on the 2012-09-29 patch that removed indirection
	for the 'function' field.  Reported by Sergey Vinokurov in
	<http://lists.gnu.org/archive/html/emacs-devel/2012-11/msg00263.html>.

	Fix SIGDANGER handlers, for AIX (Bug#13408).
	* sysdep.c.c (handle_danger_signal, deliver_danger_signal) [SIGDANGER]:
	Move handlers here from emacs.c; they were out of place.

2013-01-05  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (dump_glyph): Align glyph data better.  Use "pD" instead
	of a non-portable "t" to print ptrdiff_t values.  Allow up to 9
	digits for buffer positions, before misalignment starts.  Display