@@ -1,3 +1,8 @@
+2013-01-25  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32.c (w32_get_long_filename, init_environment, readlink):
+	Support file names encoded in DBCS codepages.
+
 2013-01-23  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32.c (max_filename_mbslen): New function.
